# autocoder

./: .env.example  .gitignore  conftest.py  pyproject.toml  pytest.ini  requirements.txt  urls-minimal.txt  urls.txt
.claude/: settings.local.json
docker/ollama/: Dockerfile  README.md  docker-compose.yml  entrypoint-lazy-pull.sh
manifest/: registry.yaml
manifest/heals/: login.0020e48b652cabfa.json  login.49eeb975b5ebe66f.json  login.69c3f854e88748e2.json
manifest/runs/: _pytest_session.xml
readme/: 01_overview.md  02_quickstart.md  03_architecture.md  04_pipeline.md  05_url_intake.md  06_auth_first.md  07_extraction.md  08_selectors_and_self_healing.md  09_llm.md  10_generation.md  11_manifest.md  12_running_tests.md  13_token_budget.md  14_extending.md  15_logging.md  16_run_report_2026-04-18.md  17_heal.md  18_cleanup.md  19_local_llm_report_2026-04-20.md  19_prompts.md  20_defects_vs_script.md  README.md
scripts/: verify_local_llm.py
src/autocoder/: __init__.py  cli.py  config.py  logger.py  models.py  orchestrator.py  report.py  utils.py
tests/: conftest.py  settings.py
tests/auth_setup/: test_auth_setup.py
tests/features/: agent.feature  catalog.feature  dq_insights.feature  home.feature  login.feature  security.feature  source_connection.feature  sources.feature  stewie.feature
tests/pages/: agent_page.py  base_page.py  catalog_page.py  dq_insights_page.py  home_page.py  login_page.py  security_page.py  source_connection_page.py  sources_page.py  stewie_page.py
tests/playwright/: conftest.py
tests/steps/: test_agent.py  test_catalog.py  (+7 more)
(+58 files in other folders)
